@@ -3,6 +3,9 @@ Changes in version 1.016
 
 - Fixed socket_notcpdelay on FreeBSD 4.x (and possibly other BSDs).
 
+- Added back the definition of socket_tcp and socket_udp, the omission
+  of which broke linking with libraries compiled against older bglibs.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
